--- a/repo/optimizationBenchmarking/org/index.html
+++ b/repo/optimizationBenchmarking/org/index.html
@@ -6,6 +6,6 @@ title: optimizationBenchmarking.org Code Repository
 <div id="home">
   <h1><code>org</code> Folder of the Code Repository</h1>
   <ul>
-    <li><a href="{{ site.url }}/repo/optimizationBenchmarking/org/optimizationBenchmarking/0.8.0/index.html">Version 0.8.0 (First Alpha)</a></li>
+    <li><a href="{{ site.baseurl }}/repo/optimizationBenchmarking/org/optimizationBenchmarking/0.8.0/index.html">Version 0.8.0 (First Alpha)</a></li>
   </ul>
 </div>
