Pseudo-Redirect to Current Version
An attempt to generate a pseudo-redirect to the current software
version.

--- a/repo/optimizationBenchmarking/org/optimizationBenchmarking/0.8.0/index.html
+++ b/repo/optimizationBenchmarking/org/optimizationBenchmarking/0.8.0/index.html
@@ -5,6 +5,7 @@ title: optimizationBenchmarking.org Code Repository
 
 <div id="home">
   <h1>Version 0.8.0: First Alpha Version</h1>
+  <p>This is the first Alpha version of our project.</p>  
   <ul>
     <li><a href="optimizationBenchmarking-0.8.0-full.jar">Stand-Alone Executable</a> [<a href="optimizationBenchmarking-0.8.0-full.jar.md5">md5</a>] [<a href="optimizationBenchmarking-0.8.0-full.jar.sha1">sha1</a>]</li>
     <li><a href="optimizationBenchmarking-0.8.0.jar">Executable without Dependencies</a> [<a href="optimizationBenchmarking-0.8.0.jar.md5">md5</a>] [<a href="optimizationBenchmarking-0.8.0.jar.sha1">sha1</a>]</li>
