--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ can create reports in LaTeX or XHTML formats or export its findings in text file
 be loaded by other applications.</p>  
 
 <p>The current version of this software is <a href="{{ site.data.currentVersion.currentVersionRepo }}">{{ site.data.currentVersion.currentVersion }}</a>.
-A stand-alone <code>jar</code> is provided <a href="{{ site.data.currentVersion.currentVersionStandAloneJarURL }}">here</code> and
+A stand-alone <code>jar</code> is provided <a href="{{ site.data.currentVersion.currentVersionStandAloneJarURL }}">here</a> and
 a set of slides introducing the whole framework and providing examples can be found
 <a href="http://github.com/optimizationBenchmarking/optimizationBenchmarking/raw/documentation/documents/evaluatorSlides/evaluatorSlides.pdf">here</a>.
 </p>
